# diadem

./: .gitignore  README.md  demo.sh  development.sh  getip  install.sh  requirements.txt  start.sh
diadem_description/: CMakeLists.txt  package.xml
diadem_description/launch/: display.launch.py  rviz.launch.py  state_publisher.launch.py
diadem_description/meshes/: FL_wheel_1.dae  FR_wheel_1.dae  RL_wheel_1.dae  RR_wheel_1.dae
diadem_description/rviz/: display.rviz  navigation.rviz
diadem_description/urdf/: diadem.gazebo  diadem.trans  diadem.xacro  diadem_sim.xacro  materials.xacro
diadem_firmware/: CMakeLists.txt  package.xml
diadem_firmware/launch/: bringup.launch.py  hubble_scripts.launch.py  mavros_launch.py  micro_ros.launch.py
diadem_firmware/scripts/: readme.md  waypoint_navigation.py
diadem_gazebo/: CMakeLists.txt  package.xml
diadem_gazebo/launch/: gazebo.launch.py  spawn_robot.launch.py
diadem_gazebo/worlds/: diadem.world
services/: rbl_upstart.service
